--- a/index.html
+++ b/index.html
@@ -12,14 +12,23 @@
 
 <style>
 
-/* ===== BASE ===== */
+/* ===== FIX GLOBAL MOVIL ===== */
 
-body{
+html, body{
 margin:0;
+padding:0;
+height:100%;
 background:black;
 color:white;
 font-family:Arial, Helvetica, sans-serif;
-overflow:hidden; /* 🔥 evita scroll global */
+
+overflow:hidden;
+overscroll-behavior:none;
+touch-action:manipulation;
+}
+
+:root{
+--vh:1vh;
 }
 
 /* ===== PANTALLAS INDEPENDIENTES ===== */
@@ -29,9 +38,12 @@ position:fixed;
 top:0;
 left:0;
 width:100%;
-height:100vh;
+height:calc(var(--vh) * 100);
+
 display:none;
-overflow-y:auto; /* scroll interno */
+overflow-y:auto;
+-webkit-overflow-scrolling:touch;
+
 padding:20px;
 box-sizing:border-box;
 background:black;
@@ -53,7 +65,7 @@ height:100%;
 
 h1,h2{text-align:center}
 
-/* ===== BOTONES ===== */
+/* ===== UI ===== */
 
 button{
 background:#111;
@@ -67,9 +79,7 @@ font-size:16px;
 cursor:pointer;
 }
 
-button:hover{
-background:#1f1f1f;
-}
+button:hover{background:#1f1f1f;}
 
 input{
 width:80px;
@@ -171,10 +181,24 @@ margin:auto;
 
 <script>
 
+/* ===== ALTURA REAL MOVIL ===== */
+
+function setRealVH(){
+let vh = window.innerHeight * 0.01;
+document.documentElement.style.setProperty('--vh', `${vh}px`);
+}
+
+setRealVH();
+window.addEventListener('resize', setRealVH);
+window.addEventListener('orientationchange', setRealVH);
+
 /* ===== PWA ===== */
+
 if("serviceWorker" in navigator){
 navigator.serviceWorker.register("service-worker.js");
 }
+
+/* ===== VARIABLES ===== */
 
 let perfilActual="";
 let diaActual=0;
@@ -190,18 +214,16 @@ const rutina={
 5:["Press banca","Dominadas","Remo mancuerna","Curl + Extensión superserie"]
 };
 
-/* ===== CAMBIO REAL DE PAGINA ===== */
+/* ===== CAMBIO DE PANTALLA ===== */
 
 function mostrar(id){
 
-document.querySelectorAll(".pantalla")
-.forEach(p=>{
+document.querySelectorAll(".pantalla").forEach(p=>{
 p.classList.remove("activa");
 p.scrollTop=0;
 });
 
 document.getElementById(id).classList.add("activa");
-
 }
 
 /* ===== PERFIL ===== */
@@ -341,4 +363,4 @@ mostrar("progreso");
 </script>
 
 </body>
-</html>
+                                     </html>
